tests/scripts/type_errors/types_with_the_same_name.roto
type Foo { a: u32 }
type Foo { b: u32 }

fn foo() {}
